# jwcnotipy

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst  setup.rst
src/: __init__.py  app.py
src/abercons_noddy_notifier.egg-info/: PKG-INFO  SOURCES.txt
