[build-system]
requires = ["setuptools>=61.0", "slack_sdk"]
build-backend = "setuptools.build_meta"

[project]
name = "abercons_noddy_notifier"
version = "0.0.1"
authors = [
  { name="Joshua W-Christy", email="me@joshuawchristy.com" },
]
description = "Provides a decorator that passes notifications to Slack"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"